Unit2/C_basic/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
22:13:13 **** Rebuild of configuration Debug for project Assi_2_2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Assi_2_@.o" "..\\src\\Assi_2_@.c" 
gcc -o Assi_2_2.exe "src\\Assi_2_@.o" 
22:13:24 **** Incremental Build of configuration Debug for project Assi_2_2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Assi_2_@.o" "..\\src\\Assi_2_@.c" 
..\src\Assi_2_@.c: In function 'main':
..\src\Assi_2_@.c:20:7: warning: comparison between pointer and integer
   if(x==y){
       ^~
..\src\Assi_2_@.c:24:13: warning: format '%d' expects a matching 'int' argument [-Wformat=]
    printf("%d is a consonant");
             ^
gcc -o Assi_2_2.exe "src\\Assi_2_@.o" 
22:13:49 **** Incremental Build of configuration Debug for project Assi_2_2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Assi_2_@.o" "..\\src\\Assi_2_@.c" 
..\src\Assi_2_@.c: In function 'main':
..\src\Assi_2_@.c:20:7: warning: comparison between pointer and integer
   if(x==y){
       ^~
..\src\Assi_2_@.c:24:13: warning: format '%c' expects a matching 'int' argument [-Wformat=]
    printf("%c is a consonant");
             ^
gcc -o Assi_2_2.exe "src\\Assi_2_@.o" 
22:17:03 **** Incremental Build of configuration Debug for project Assi_2_2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Assi_2_@.o" "..\\src\\Assi_2_@.c" 
..\src\Assi_2_@.c: In function 'main':
..\src\Assi_2_@.c:21:16: error: 'found' undeclared (first use in this function)
    if(y[i]==x) found=1;
                ^~~~~
..\src\Assi_2_@.c:21:16: note: each undeclared identifier is reported only once for each function it appears in
22:19:01 **** Incremental Build of configuration Debug for project Assi_2_2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Assi_2_@.o" "..\\src\\Assi_2_@.c" 
gcc -o Assi_2_2.exe "src\\Assi_2_@.o" 
Info: Nothing to build for Assi_2_2
22:22:34 **** Incremental Build of configuration Debug for project Assi_2_2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Assi_2_@.o" "..\\src\\Assi_2_@.c" 
gcc -o Assi_2_2.exe "src\\Assi_2_@.o" 
Info: Nothing to build for Assi_2_2
22:23:56 **** Incremental Build of configuration Debug for project Assi_2_2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\Assi_2_@.o" "..\\src\\Assi_2_@.c" 
gcc -o Assi_2_2.exe "src\\Assi_2_@.o" 
Info: Nothing to build for Assi_2_2
Info: Nothing to build for Assi_2_2
